test/testData/parser/negative/incorrectStorageSpec.err
test/testData/parser/negative/incorrectStorageSpec.c:2:1: error: illegal storage class on file-scoped variable
test/testData/parser/negative/incorrectStorageSpec.c:5:12: error: type name does not allow storage class to be specified
test/testData/parser/negative/incorrectStorageSpec.c:6:12: error: type name does not allow storage class to be specified
test/testData/parser/negative/incorrectStorageSpec.c:7:12: error: type name does not allow storage class to be specified
test/testData/parser/negative/incorrectStorageSpec.c:8:12: error: type name does not allow storage class to be specified
test/testData/parser/negative/incorrectStorageSpec.c:11:12: error: invalid storage class specifier in function declarator
test/testData/parser/negative/incorrectStorageSpec.c:11:28: error: invalid storage class specifier in function declarator
